# file-spy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
domain/: Content.cpp  Observer.cpp  Observer.hpp
file-spy-lib/: CMakeLists.txt
file-spy-lib/domain/: Content.hpp  Observer.cpp  Observer.hpp
file-spy-lib/util/: FileUtil.cpp  FileUtil.hpp  Logger.cpp  Logger.hpp
file-spy-test/: CMakeLists.txt  FileUtilTest.cpp  ObserverIntegrationTest.cpp  ObserverTest.cpp
main/: CMakeLists.txt  main.cpp
util/: Logger.hpp
